--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,16 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-style: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #f5f8fa;
 }
 
-html,
 body {
   max-width: 100vw;
   background-color: #141010;
