--- a/src/styles/btnHeader.module.css
+++ b/src/styles/btnHeader.module.css
@@ -1,9 +1,9 @@
-.btnStyle {
-    padding: 0;
-    margin: 0;
-    margin-right: 1rem;
+.btnDefaultColor {
+    color: #36454f;
+    transition: .5s;
 }
 
 .btnHoverHeader:hover {
-    color: #f5f8fa !important;
+    color: #f5f8fa;
+    transition: .5s;
 }
